--- a/core/build.gradle
+++ b/core/build.gradle
@@ -4,3 +4,7 @@ sourceCompatibility = 1.8
 sourceSets.main.java.srcDirs = [ "src/" ]
 
 eclipse.project.name = appName + "-core"
+
+dependencies {
+    compile "com.badlogicgames.box2dlights:box2dlights:1.4"
+}
