--- a/core/build.gradle
+++ b/core/build.gradle
@@ -7,4 +7,5 @@ eclipse.project.name = appName + "-core"
 
 dependencies {
     compile "com.badlogicgames.box2dlights:box2dlights:1.4"
+    compile group: 'org.yaml', name: 'snakeyaml', version: '1.27'
 }
