--- a/core/assets/config.yaml
+++ b/core/assets/config.yaml
@@ -1,3 +1,14 @@
 ---
 initialMap: bolero
+mapsPath: maps/
+keys:
+  up: W
+  down: S
+  left: A
+  right: D
+  interact: E
+  reload: R
+  debug: H
+  zoomIn: P
+  zoomOut: O
 ...
