--- a/build.gradle
+++ b/build.gradle
@@ -6,11 +6,13 @@ buildscript {
         mavenCentral()
         maven { url "https://plugins.gradle.org/m2/" }
         maven { url "https://oss.sonatype.org/content/repositories/snapshots/" }
+        maven { url "https://oss.sonatype.org/content/repositories/releases/" }
         jcenter()
         google()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:3.4.0'
+        classpath "com.badlogicgames.gdx:gdx-ai:1.8.1"
     }
 }
 
@@ -58,6 +60,7 @@ project(":core") {
         api "com.badlogicgames.gdx:gdx:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
         api "com.badlogicgames.gdx:gdx-controllers:$gdxVersion"
+        compile "com.badlogicgames.gdx:gdx-ai:1.8.1"
         compileOnly "org.projectlombok:lombok:1.18.8"
         annotationProcessor 'org.projectlombok:lombok:1.18.8'
     }
