--- a/core/build.gradle
+++ b/core/build.gradle
@@ -3,9 +3,13 @@ sourceCompatibility = 1.8
 
 sourceSets.main.java.srcDirs = [ "src/" ]
 
-eclipse.project.name = appName + "-core"
-
 dependencies {
-    compile "com.badlogicgames.box2dlights:box2dlights:1.4"
-    compile group: 'org.yaml', name: 'snakeyaml', version: '1.27'
+    api "com.badlogicgames.gdx:gdx:$gdxVersion"
+    api "com.badlogicgames.gdx:gdx-box2d:$gdxVersion"
+    api "com.badlogicgames.gdx:gdx-controllers:$gdxVersion"
+    api "com.badlogicgames.gdx:gdx-ai:$aiVersion"
+    api "com.badlogicgames.box2dlights:box2dlights:1.4"
+    api group: 'org.yaml', name: 'snakeyaml', version: '1.27'
+    compileOnly "org.projectlombok:lombok:$lombokVersion"
+    annotationProcessor "org.projectlombok:lombok:$lombokVersion"
 }
