--- a/core/assets/config/npcs.yaml
+++ b/core/assets/config/npcs.yaml
@@ -47,8 +47,13 @@ npcs:
           - textID: choice3 # Bye
     schedules:
       - time:
-          hour: 0
+          hour: 8
           minute: 30
         nodes:
           - id: villager3s
           - id: villager4s
+      - time:
+          hour: 10
+          minute: 00
+        nodes:
+          - id: villager5s
